--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="blue">#0091FF</color>
     <color name="pastel">#DADADA</color>
     <color name="red">#FF0000</color>
+    <color name="yellow">#FFFB00</color>
 </resources>
