--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="android:colorBackground">@color/white</item>
         <item name="android:colorForeground">@color/pastel</item>
         <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColorHighlight">@color/green_50</item>
 
         <item name="android:textColorSecondary">@color/grayDark</item>
         <item name="android:iconTint">@color/black</item>
