--- a/app/src/main/res/layout/activity_usersettings.xml
+++ b/app/src/main/res/layout/activity_usersettings.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<RelativeLayout
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".home.UserSettingsActivity">
@@ -55,7 +59,7 @@
                         android:id="@+id/txtUsername"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="rafaelguerra"
+                        android:text="."
                         android:inputType="textEmailAddress"
                         android:enabled="false"
                         android:clickable="true"/>
@@ -89,7 +93,7 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/txtFullname"
-                        android:text="Rafael Guerra"
+                        android:text="."
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="textEmailAddress"
@@ -124,7 +128,7 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/txtEmail"
-                        android:text="guerrafaell@gmail.com"
+                        android:text="."
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="textEmailAddress"
@@ -194,6 +198,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="textEmailAddress"
+                        android:text="."
                         android:enabled="false"
                         android:textSize="16sp"
                         android:paddingStart="15dp"/>
@@ -248,3 +253,17 @@
     </LinearLayout>
 
 </ScrollView>
+    <View
+        android:id="@+id/overlayView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#80000000"
+        android:visibility="gone" />
+
+    <ProgressBar
+        android:id="@+id/loadingProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+</RelativeLayout>
