First Chart Test

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="green_50">#804FDB4A</color>
     <color name="greenDark_50">#8006B600</color>
     <color name="disabled">#BDBDBD</color>
+    <color name="transparent">#00000000</color>
 </resources>
