--- a/app/src/main/res/layout/dialog_reset_password.xml
+++ b/app/src/main/res/layout/dialog_reset_password.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -20,11 +21,42 @@
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <LinearLayout
+        android:id="@+id/errorMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:visibility="visible"
+        android:layout_marginTop="2dp"
+        android:layout_marginStart="5dp">
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:contentDescription="error"
+            android:scaleType="fitXY"
+            android:src="@drawable/baseline_alert_24"
+            app:tint="@color/red"
+            android:layout_gravity="start"
+            />
+        <TextView
+            android:id="@+id/txtError"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Os campos das senhas devem corresponder"
+            android:textColor="@color/red"
+            android:textStyle="bold"
+            android:textSize="12sp"
+            android:layout_marginStart="2dp"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Confirme a nova senha"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="3dp"
         app:endIconMode="password_toggle">
 
         <com.google.android.material.textfield.TextInputEditText
