--- a/app/src/main/res/layout/activity_usersettings.xml
+++ b/app/src/main/res/layout/activity_usersettings.xml
@@ -35,11 +35,42 @@
             android:orientation="vertical"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="30dp"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_marginBottom="15dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imgProfile"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/default_image"
+                tools:src="@drawable/e"
+                android:visibility="gone"/>
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmerImage"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:shimmer_auto_start="true"
+                android:visibility="visible">
+
+                <View
+                    android:id="@+id/shimmerLblFirstname"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/image_shape"
+                    android:visibility="visible"
+                    android:backgroundTint="?attr/shimmerColor"/>
+            </com.facebook.shimmer.ShimmerFrameLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
