--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,7 +33,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seja bem vindo, "
+                    android:text="Bem vindo, "
                     android:textSize="22sp"
                     android:textStyle="bold"/>
 
@@ -78,10 +78,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Dados Recentes:"
+                    android:text="Dados Recentes"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:layout_marginBottom="20dp"/>
+                    android:layout_marginBottom="10dp"/>
 
                 <com.google.android.material.imageview.ShapeableImageView
                     app:shapeAppearanceOverlay="@style/RoundedSquare"
