--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -42,41 +42,49 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:hint="Nome Completo"
                 android:layout_marginBottom="20dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txtFullname"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:inputType="textEmailAddress"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:hint="Nome de Usuário"
                 android:layout_marginBottom="20dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txtUsername"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:inputType="textEmailAddress"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-                <AutoCompleteTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:hint="Nacionalidade"
+                android:layout_marginBottom="5dp">
+
+                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                     android:id="@+id/txtNationality"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:inputType="text"
-                    android:hint="Nacionalidade"
-                    android:layout_marginBottom="5dp"
-                    android:completionThreshold="1"
-                    android:background="@drawable/spinner_background"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textColorHint="@color/gray"/>
+                    android:enabled="false"
+                    android:textSize="16sp"
+                    android:paddingStart="15dp"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:id="@+id/autoError"
