--- a/app/src/main/res/layout/dialog_reset_password.xml
+++ b/app/src/main/res/layout/dialog_reset_password.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:layout_marginTop="2dp"
         android:layout_marginStart="5dp">
         <ImageView
