--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -80,7 +80,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="text"
-                    android:enabled="false"
+                    android:enabled="true"
                     android:textSize="16sp"
                     android:paddingStart="15dp"/>
 
