--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -1,104 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".home.homefragments.Teams"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:focusable="false">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:focusable="false"
+        android:visibility="visible">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:background="?android:attr/colorBackground">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imgTeam"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:src="@drawable/default_image"
-                android:layout_marginStart="15dp"
-                android:padding="5dp"
-                android:layout_gravity="start"/>
-
-            <TextView
-                android:id="@+id/lblTeamName"
-                android:textColor="?android:attr/textColorPrimary"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Nome da Equipe"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:gravity="center_vertical"/>
-
-            <ImageButton
-                android:id="@+id/btnTeamSettings"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/baseline_settings_24"
-                android:background="@null"
-                android:layout_marginEnd="20dp"
-                android:layout_gravity="end|center"
-                app:tint="?android:attr/iconTint" />
-
-        </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@drawable/divider"
-            android:backgroundTint="?android:attr/colorForeground"
-            android:layout_marginBottom="20dp"/>
-
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp">
+            android:layout_marginTop="5dp"/>
 
-            <com.google.android.material.imageview.ShapeableImageView
-                app:shapeAppearanceOverlay="@style/RoundedSquare"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="?attr/fragmentsBackground"
-                android:scaleType="center"
-                android:layout_gravity="center"
-                android:layout_marginBottom="30dp"/>
-
-            <com.google.android.material.imageview.ShapeableImageView
-                app:shapeAppearanceOverlay="@style/RoundedSquare"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:background="?attr/fragmentsBackground"
-                android:scaleType="center"
-                android:layout_gravity="center"
-                android:layout_marginBottom="30dp"/>
-
-            <com.google.android.material.imageview.ShapeableImageView
-                app:shapeAppearanceOverlay="@style/RoundedSquare"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:background="?attr/fragmentsBackground"
-                android:scaleType="center"
-                android:layout_gravity="center"
-                android:layout_marginBottom="30dp"/>
-
-        </LinearLayout>
     </LinearLayout>
 
-</ScrollView>
+    <LinearLayout
+        android:id="@+id/linearAlert"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/imgAlert"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/baseline_noteam_24"
+            android:layout_marginBottom="20dp"
+            app:tint="?android:attr/iconTint"/>
+
+        <TextView
+            android:id="@+id/txtAlert"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:textAlignment="center"
+            android:text="Você ainda não possui nenhuma equipe.\n Se deseja criar uma, clique no botão \'+\' abaixo"
+            android:layout_gravity="center"
+            android:textSize="16sp"/>
+
+    </LinearLayout>
+
+
+
+    <ImageButton
+        android:id="@+id/btnAddTeam"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:contentDescription="AddTeamButton"
+        android:scaleType="fitXY"
+        app:tint="@color/white"
+        android:background="@drawable/circle_button"
+        android:src="@drawable/baseline_add_24"
+        android:layout_gravity="end|bottom"
+        android:layout_marginBottom="25dp"
+        android:layout_marginEnd="20dp"/>
+
+</FrameLayout>
