--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:title="Analytics"
-        android:id="@+id/analytics"
-        android:icon="@drawable/outline_analytics_24"/>
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,6 +10,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/teams"
-        android:title="Teams"
+        android:title="Equipes"
         android:icon="@drawable/outline_people_24"/>
+
+    <item
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/notifications"
+        android:title="Notificações"
+        android:icon="@drawable/outline_notifications_24"/>
 </menu>
