--- a/app/src/main/res/layout/activity_usersettings.xml
+++ b/app/src/main/res/layout/activity_usersettings.xml
@@ -9,7 +9,7 @@
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.UserSettingsActivity">
+    tools:context=".user.UserSettingsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -61,9 +61,8 @@
                 android:layout_height="100dp"
                 app:shimmer_auto_start="true"
                 android:visibility="visible">
-
                 <View
-                    android:id="@+id/shimmerLblFirstname"
+                    android:id="@+id/shimmer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/image_shape"
@@ -85,17 +84,14 @@
                     android:layout_weight="1"
                     android:hint="Nome de Usuário"
                     android:layout_marginBottom="4dp">
-
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/txtUsername"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="."
+                        android:text="carregando..."
                         android:inputType="textEmailAddress"
                         android:enabled="false"
                         android:clickable="true"/>
-
-
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <ImageButton
@@ -124,7 +120,7 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/txtFullname"
-                        android:text="."
+                        android:text="carregando..."
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="textEmailAddress"
@@ -159,7 +155,7 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/txtEmail"
-                        android:text="."
+                        android:text="carregando..."
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="textEmailAddress"
@@ -229,7 +225,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="text"
-                        android:text="."
+                        android:text="carregando..."
                         android:enabled="false"
                         android:textSize="16sp"
                         android:paddingStart="15dp"/>
